# django-polls-playwright-demo

./: LICENSE.txt  README.md  pyproject.toml
config/: settings.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_add_initial_data.py
polls/templates/polls/: detail.html  index.html
tests/: conftest.py  settings.py  test_ui.py
tests/polls/: factories.py  pages.py  test_ui.py  test_ui_sr.py
