[project]
name = "django-polls-playwright-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "playwright>=1.49.1",
    "psycopg2>=2.9.10",
    "pytest-django>=4.9.0",
    "pytest>=8.3.4",
    "pytest-playwright>=0.6.2",
]
